--- a/index.html
+++ b/index.html
@@ -12,18 +12,16 @@
 
 <div>
 
-  <h2>The one and only online source for the</h2>
+  <h2>hello there...</h2>
 
-  <h1>Red Door Line Length</h1>
+  <h1>ehrmettiaodl</h1>
 
-  <p>Image updated every two minutes. If the image does not update, use CTRL+F5.</p>
-
-  <p>Picture from <b>----------.</b>
-    Update time is ~45s after picture taken.</p>
+  <p>conrgats. im low-key kinda impressed.</p>
+  
   <div class="pictureBack">
       <img src="images/closed.png">
   </div>
 
 </div>
-  <h3>A d-nee project. Hosted in Page 142. Get the <a href="https://github.com/d-nee/RedDoorLine">strap</a>.</h3>
+  <h3>Sincerely, anon22722.</h3>
 </body></html>
