--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <p>conrgats. im low-key kinda impressed.</p>
   
   <div class="pictureBack">
-      <img src="images/closed.png">
+      <img src="images/typed.jpg">
   </div>
 
 </div>
