--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
 
 <div>
 
-  <h2>hello there...</h2>
+  <h2>Hi sir/ma'am...</h2>
+  <h1>EHRMETTIAODL</h1>
 
-  <h1>ehrmettiaodl</h1>
-
-  <p>conrgats. im low-key kinda impressed.</p>
+  <p>Congrats. He is partially impressed. Click <a href="#">here</a> to mark your presence and record your momentous accomplishment.</p>
   
   <div class="pictureBack">
       <img src="images/typed.jpg">
   </div>
 
 </div>
-  <h3>Sincerely, anon22722.</h3>
+  <h3>Sincerely, anon22722. See you on 3/14/2020.</h3>
 </body></html>
