--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html><head>
 
-  <title>Red Door Line</title>
+  <title>anon22722's puzzle for slots</title>
 
   <link href="https://fonts.googleapis.com/css?family=Yantramanav:100,300,400,500,700,900" rel="stylesheet">
 
