--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <h2>Hi sir/ma'am...</h2>
   <h1>EHRMETTIAODL</h1>
 
-  <p>Congrats. He is partially impressed. Click <a href="#">here</a> to mark your presence and record your momentous accomplishment.</p>
+  <p>Congrats. He is partially impressed. Don't expose this website, your treasure is at stake. Click <a href="https://forms.gle/JAMD4StzPCJweHh26">here</a> to mark your presence and record your momentous accomplishment.</p>
   
   <div class="pictureBack">
       <img src="images/typed.jpg">
