--- a/index.html
+++ b/index.html
@@ -1,11 +1,10 @@
 <html><head>
 
-  <title>anon22722's puzzle for slots</title>
-
+  <title>[prime(message)].com</title>
   <link href="https://fonts.googleapis.com/css?family=Yantramanav:100,300,400,500,700,900" rel="stylesheet">
-
   <link rel="stylesheet" type="text/css" href="style.css">
-
+  <meta name="robots" content="noindex,nofollow">
+  
 </head>
 
 <body>
@@ -15,7 +14,7 @@
   <h2>Hi sir/ma'am...</h2>
   <h1>EHRMETTIAODL</h1>
 
-  <p>Congrats. He is partially impressed. Don't expose this website, your treasure is at stake. Click <a href="https://forms.gle/JAMD4StzPCJweHh26">here</a> to mark your presence and record your momentous accomplishment.</p>
+  <p>Congrats. He is partially impressed. Don't expose this website, your treasure is at stake if you do. Click <a href="https://forms.gle/JAMD4StzPCJweHh26">here</a> to mark your presence and record your momentous accomplishment.</p>
   
   <div class="pictureBack">
       <img src="images/typed.jpg">
