--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
 
   <h2>Hi sir/ma'am...</h2>
   <h1>EHRMETTIAODL</h1>
-
+  <h2>(3/14/2020)??</h2>
   <!--Thanks for looking at the code. You should probably keep an eye on this, who knows, it might be updated with further clues in the future...-->
-   <h2>(3/14/2020)??</h2>
+  <!--March 14th, 2020-->
+  <!--Don't tell.-->
   <p>Congrats. He is partially impressed. Don't expose this website, your treasure is at stake if you do. Click <a href="https://forms.gle/JAMD4StzPCJweHh26">here</a> to mark your presence and record your momentous accomplishment.</p>
   
   <div class="pictureBack">
