--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 <body>
 
 <div>
-
   <h2>Hi sir/ma'am...</h2>
   <h1>EHRMETTIAODL</h1>
-  <h2>(3/14/2020)??</h2>
+  <h2>(3/10/2020)??</h2>
   <!--Thanks for looking at the code. You should probably keep an eye on this, who knows, it might be updated with further clues in the future...-->
-  <!--March 14th, 2020-->
+  <!--March 10th, 2020-->
   <!--Don't tell.-->
+  <!--Keep your advantage to yourself. Unless you want others to have it, then that is your loss.-->
+  <!--If you somehow found this before marking your presence on the Google form, you are due a bonus advantage.-->
+  <!--Secret code ===> <fibonacci>-->
+  <!--not fibonacci, but <fibonacci>.-->
   <p>Congrats. He is partially impressed. Don't expose this website, your treasure is at stake if you do. Click <a href="https://forms.gle/JAMD4StzPCJweHh26">here</a> to mark your presence and record your momentous accomplishment.</p>
   
   <div class="pictureBack">
@@ -24,5 +27,6 @@
   </div>
 
 </div>
-  <h3>Sincerely, anon22722. See you on 3/14/2020.</h3>
+  <h3>Sincerely, anon22722. See you on 3/10/2020.</h3>
 </body></html>
+
